force-app/main/default/objects/Factura__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente Empresa, Cliente Personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas (Cliente)</relationshipLabel>
    <relationshipName>FacturasCliente</relationshipName>
    <type>Lookup</type>
</CustomField>