force-app/main/default/objects/Factura__c/fields/Codigo_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Impuesto__c</fullName>
    <label>Código Impuesto</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>