force-app/main/default/objects/Factura__c/fields/Condicion_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Condicion_Cobro__c</fullName>
    <label>Condición Cobro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>