force-app/main/default/objects/Factura__c/fields/CONGA_ImporteIVA__c.field-meta.xml
<CustomField>
    <fullName>CONGA_ImporteIVA__c</fullName>
    <formula>Importe__c * Codigo_Impuesto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_ImporteIVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>