force-app/main/default/objects/Factura__c/fields/CONGA_NumLineas__c.field-meta.xml
<CustomField>
    <fullName>CONGA_NumLineas__c</fullName>
    <label>CONGA_NumLineas</label>
    <summaryForeignKey>Linea_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>