force-app/main/default/objects/Factura__c/fields/CONGA_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Oportunidad__c</fullName>
    <formula>CASESAFEID(Oportunidad__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Oportunidad</label>
    <type>Text</type>
</CustomField>