force-app/main/default/objects/Factura__c/fields/Enviar_Factura_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Factura_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para señalar que esta Factura en concreto no será enviada a Oracle.</description>
    <label>Enviar Factura Oracle</label>
    <type>Checkbox</type>
</CustomField>