force-app/main/default/objects/Factura__c/fields/Estado_de_la_factura__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_factura__c</fullName>
    <label>Estado de la factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Pendiente de emisión</fullName>
                <label>Pdte.Envío a Oracle</label>
            </value>
            <value>
                <fullName>Volcada a Oracle</fullName>
            </value>
            <value>
                <fullName>Conciliada SF</fullName>
            </value>
            <value>
                <fullName>Emitida</fullName>
            </value>
            <value>
                <fullName>Cobrada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Volcada y Emitida</fullName>
            </value>
            <value>
                <fullName>Impagada</fullName>
            </value>
            <value>
                <fullName>Abonada</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
                <isActive>false</isActive>
                <label>Anulada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>