force-app/main/default/objects/Factura__c/fields/Estado_plan_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Estado_plan_de_pagos__c</fullName>
    <label>Estado plan de pagos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>