force-app/main/default/objects/Factura__c/fields/Estado_PlanPagos_Report_Aux__c.field-meta.xml
<CustomField>
    <fullName>Estado_PlanPagos_Report_Aux__c</fullName>
    <formula>TEXT(Plan_de_pagos__r.Estado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado PlanPagos Report Aux</label>
    <type>Text</type>
</CustomField>