force-app/main/default/objects/Factura__c/fields/Factura_rectificada__c.field-meta.xml
<CustomField>
    <fullName>Factura_rectificada__c</fullName>
    <label>Factura rectificada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>