force-app/main/default/objects/Factura__c/fields/FacturaRectificada__c.field-meta.xml
<CustomField>
    <fullName>FacturaRectificada__c</fullName>
    <label>Factura rectificada</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>