force-app/main/default/objects/Factura__c/fields/Fecha_Contable__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Contable__c</fullName>
    <label>Fecha Contable</label>
    <type>Date</type>
</CustomField>