force-app/main/default/objects/Factura__c/fields/Fecha_de_emision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_emision__c</fullName>
    <label>Fecha factura</label>
    <type>Date</type>
</CustomField>