force-app/main/default/objects/Factura__c/fields/ImpagoAsociado__c.field-meta.xml
<CustomField>
    <fullName>ImpagoAsociado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impago asociado</label>
    <type>Checkbox</type>
</CustomField>