force-app/main/default/objects/Factura__c/fields/Importe_factura_con_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_factura_con_IVA__c</fullName>
    <formula>IF(AND(Codigo_Impuesto__c &lt;&gt; 0, NOT(ISNULL(Codigo_Impuesto__c))),
    Importe__c *  (1+Codigo_Impuesto__c), 
				Importe__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe factura con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>