force-app/main/default/objects/Factura__c/fields/Importe_presupuesto_con_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_presupuesto_con_IVA__c</fullName>
    <formula>Oportunidad__r.Amount *  Oportunidad__r.Porcentaje_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe presupuesto con IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>