force-app/main/default/objects/Factura__c/fields/ImporteFactura__c.field-meta.xml
<CustomField>
    <fullName>ImporteFactura__c</fullName>
    <label>Importe Factura</label>
    <summarizedField>Linea_de_factura__c.Importe__c</summarizedField>
    <summaryForeignKey>Linea_de_factura__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>