force-app/main/default/objects/Factura__c/fields/Metodo_de_cobro__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_cobro__c</fullName>
    <label>Método de cobro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRANSFERENCIA</fullName>
            </value>
            <value>
                <fullName>RECIBO</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>