force-app/main/default/objects/Factura__c/fields/Numero_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_factura__c</fullName>
    <label>Número de factura</label>
    <length>15</length>
    <type>Text</type>
</CustomField>