force-app/main/default/objects/Factura__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <formula>Oportunidad__r.Promocion__r.Obra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obra</label>
    <type>Text</type>
</CustomField>