force-app/main/default/objects/Factura__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>