force-app/main/default/objects/Factura__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reserva</fullName>
            </value>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Aplazado</fullName>
            </value>
            <value>
                <fullName>Escritura</fullName>
            </value>
            <value>
                <fullName>Abonos</fullName>
            </value>
            <value>
                <fullName>Aportación capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>