force-app/main/default/objects/Factura__c/fields/Pago_o_Cuota__c.field-meta.xml
<CustomField>
    <fullName>Pago_o_Cuota__c</fullName>
    <label>Tipología de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Cuota</fullName>
            </value>
            <value>
                <fullName>Cuota Extra</fullName>
            </value>
            <value>
                <fullName>Abono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>