force-app/main/default/objects/Factura__c/fields/Participante__c.field-meta.xml
<CustomField>
    <fullName>Participante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante</label>
    <referenceTo>Participante__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>