force-app/main/default/objects/Factura__c/fields/Permitir_borrado_con_numeracion__c.field-meta.xml
<CustomField>
    <fullName>Permitir_borrado_con_numeracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitir borrado con numeración</label>
    <type>Checkbox</type>
</CustomField>