force-app/main/default/objects/Factura__c/fields/Plan_de_pagos__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_pagos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de pagos</label>
    <referenceTo>Plan_de_pagos__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>