force-app/main/default/objects/Factura__c/fields/Porcentaje_de_participacion__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_participacion__c</fullName>
    <label>Porcentaje de participación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>