force-app/main/default/objects/Factura__c/fields/Referencia__c.field-meta.xml
<CustomField>
    <fullName>Referencia__c</fullName>
    <label>Referencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>