force-app/main/default/objects/Factura__c/fields/SecuencialFactura__c.field-meta.xml
<CustomField>
    <fullName>SecuencialFactura__c</fullName>
    <label>SecuencialFactura</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>