force-app/main/default/objects/Factura__c/fields/Sociedad__c.field-meta.xml
<CustomField>
    <fullName>Sociedad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sociedad</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad Cooperativa</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sociedad Promotora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>