force-app/main/default/objects/Factura__c/fields/Tipo_de_linea__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_linea__c</fullName>
    <label>Tipo de línea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venta de Inmueble</fullName>
            </value>
            <value>
                <fullName>Reserva de Inmueble</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Entrega a cuenta</fullName>
            </value>
            <value>
                <fullName>Aportaciones Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>