force-app/main/default/objects/Factura__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_factura__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Abono</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>