force-app/main/default/objects/Factura__c/validationRules/CambiarDescripcionFactura.validationRule-meta.xml
<ValidationRule>
    <fullName>CambiarDescripcionFactura</fullName>
    <active>true</active>
    <description>Regla de validación para el cambio de estado de facturas por parte de usuarios no administradores o de integración.</description>
    <errorConditionFormula>AND(
				ISCHANGED(Descripcion__c),
				OR(
								$User.ProfileId != &apos;00ef2000001aiAs&apos;,
        $User.Id != &apos;005f20000097BPfAAM&apos;)
)</errorConditionFormula>
    <errorMessage>¡Cuidado! La Descripción de la Factura no puede ser cambiada de forma manual.</errorMessage>
</ValidationRule>