force-app/main/default/objects/Factura__c/validationRules/EnvioOracle.validationRule-meta.xml
<ValidationRule>
    <fullName>EnvioOracle</fullName>
    <active>true</active>
    <description>Si se intenta marcar el check de Envío a Oracle cuando no hay fecha de factura ni fecha contable salta la regla.</description>
    <errorConditionFormula>AND(
					ISCHANGED(Enviar_Factura_Oracle__c ),
     ISBLANK(Fecha_de_emision__c),
					ISBLANK(Fecha_Contable__c),
				 $User.ProfileId != &apos;00ef2000001aiAs&apos;
	)</errorConditionFormula>
    <errorMessage>La Fecha de Factura y la Fecha Contable deben estar rellenas antes de poder enviarse a Oracle.</errorMessage>
</ValidationRule>