force-app/main/default/objects/Factura__c/validationRules/EstadoFactura.validationRule-meta.xml
<ValidationRule>
    <fullName>EstadoFactura</fullName>
    <active>false</active>
    <description>El estado de la factura no puede ser cambiado manualmente.</description>
    <errorConditionFormula>AND(ISCHANGED(Estado_de_la_factura__c),
$User.ProfileId != &apos;00ef2000001aiAs&apos;)</errorConditionFormula>
    <errorMessage>Solo los administradores pueden cambiar el estado de la factura.</errorMessage>
</ValidationRule>