force-app/main/default/objects/Factura__c/validationRules/ImporteDistintoImporteLineas.validationRule-meta.xml
<ValidationRule>
    <fullName>ImporteDistintoImporteLineas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Importe__c ),
Importe__c &lt;&gt; ImporteLineas__c
)</errorConditionFormula>
    <errorDisplayField>Importe__c</errorDisplayField>
    <errorMessage>El importe introducido no corresponde con la suma de importes de las líneas de factura. Debe adaptar los importes.</errorMessage>
</ValidationRule>