force-app/main/default/objects/Factura__c/validationRules/UltimaModificacionAdministrador.validationRule-meta.xml
<ValidationRule>
    <fullName>UltimaModificacionAdministrador</fullName>
    <active>true</active>
    <description>Si la última modificación ha sido realizada por el usuario de integración y un comercial intenta modificar la factura salta la regla de validación.</description>
    <errorConditionFormula>AND(
					LastModifiedBy.ProfileId = &apos;00ef2000001aiAs&apos;,
     $User.ProfileId = &apos;00ef2000001nphv&apos;,
				 ISPICKVAL(Estado_de_la_factura__c, &apos;Cobrada&apos;) 
	)</errorConditionFormula>
    <errorMessage>Esta factura solo puede ser modificada por un administrador ya que ya ha pasado por todos los procesos automáticos.</errorMessage>
</ValidationRule>