force-app/main/default/objects/Factura__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cliente__c</columns>
    <columns>Importe__c</columns>
    <columns>Codigo_Impuesto__c</columns>
    <columns>Estado_de_la_factura__c</columns>
    <columns>Fecha_de_emision__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>